testsuite/tests/properties/invalid_node_builder/bad_generic_type.lkt
import common_empty

class Example: BaseExample {
    fun f(): NodeBuilder[Int] = 0
}
